--- a/ch05/02trigger_template/tmpl.html
+++ b/ch05/02trigger_template/tmpl.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- リスト5.1 -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Go Web Programming</title>
