--- a/ch04/04form/client.html
+++ b/ch04/04form/client.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <form action="http://127.0.0.1:8080/process?hello=world&thread=123" method="post" enctype="application/x-www-form-urlencoded">
+    <!-- <form action="http://127.0.0.1:8080/process" method="post" enctype="multipart/form-data"> -->
       <input type="text" name="hello" value="sau sheong"/>
       <input type="text" name="post" value="456"/>
       <input type="submit"/>
